--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Home Page</title>
 </head>
 <body>
+    
     <section class="hero-image">
         <h1 class="hero-text">
             Te Puia
             <hr>
         </h1>
+        <p>Experience Something New</p>
     </section>
 </body>
 </html>
