--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <title>Home Page</title>
 </head>
 <body>
-    
+    <section class="menu-bar">
+        
+
+    </section>
+
+
+
     <section class="hero-image">
         <h1 class="hero-text">
             Te Puia
             <hr>
         </h1>
-        <p>Experience Something New</p>
+        <p id="hero-under-text">A Place That Changes You</p>
     </section>
 </body>
 </html>
