--- a/index.html
+++ b/index.html
@@ -8,18 +8,37 @@
 </head>
 <body>
     <section class="menu-bar">
-        
+        <a class="logo-link" href="index.html"><img id="logo-image" src="./images/Te-Puia-logo.png"></a>
 
     </section>
 
 
 
-    <section class="hero-image">
+    <section class="hero-image-home">
         <h1 class="hero-text">
             Te Puia
-            <hr>
+            <hr class = "menu-line-hero">
         </h1>
         <p id="hero-under-text">A Place That Changes You</p>
     </section>
+<!-- grid layout start -->
+
+    <div class="parent">
+        <div class="menu-line"><hr></div>
+        <div class="heading-text"> </div>
+        <div class="three-col-img"> </div>
+        <div class="three-col-img"> </div>
+        <div class="three-col-img"> </div>
+        <div class="three-col-txt"> </div>
+        <div class="three-col-txt"> </div>
+        <div class="three-col-txt"> </div>
+        <div class="menu-line"> </div>
+        <div class="full-page-img"> </div>
+        <div class="heading-text"> </div>
+        <div class="menu-line"> </div>
+        <div class="details-hero"> </div>
+        <div class="details-txt"> </div>
+        <div class="details-txt"> </div>
+        </div>
 </body>
 </html>
