--- a/experiences.html
+++ b/experiences.html
@@ -10,10 +10,46 @@
     <section class="menu-bar">   
         <ul>
             <li><a class="logo-link" href="index.html"><img class="logo-img" src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
-            <li><a class="other-buttons" id="book-now" href="#news">Book Now</a></li>
-            <li><a class="other-buttons" href="#contact">About</a></li>
-            <li><a class="other-buttons" href="#about">Experiences</a></li>
+            <li><a class="other-buttons" id="book-now" href="booking.html">Book Now</a></li>
+            <li><a class="other-buttons" href="about.html">About</a></li>
+            <li><a class="other-buttons" href="experiences.html">Experiences</a></li>
           </ul>
     </section>
+    <section class="hero-image">
+        <section class="experiences-hero">
+        <h1 class="hero-text">
+            Experiences
+            <hr class="menu-line-hero">
+        </h1>
+        <p id="hero-under-text">Change Your Life</p>
+    </section>
+    </section>
+
+    <section class="two-column-left">
+
+        <div>
+            <img class="experiences-img" src="./images/" alt="National Carving School">
+        </div>
+
+        <div class="info">
+            <h1>National Carving School</h1>
+            <p>
+                In 1967, the first intake to the National Carving School began the task of learning the disciplines of their Māori ancestors. Among those students was Clive Fugill, the man who would become master carver of the institute today.
+                <br>
+                <br>
+                “I’ll never forget that first day,” says Clive, “Our master carver, Hone Taiapa, looked at us all and said, “you are here to learn the art to pass it on to generations. Keep it alive for we could lose our identity.” It was exciting to be playing such an important role to save Māori art,” says Clive, “everyone has a reason in life. This was my reason. And that’s why I’m still here over 40 years later. If we lose our arts and crafts we lose our identity.”
+                <br>
+                <br>
+                Today fulltime carving students study for three years at the national carving school, under the guidance of those, such as Clive Fugill and James Rickard, master carvers at Te Puia who were once institute carving students themselves.
+                <br>
+                <br>
+                The protruding tongue, as used in the haka (war dance), is intended as a symbol of defiance, determination and strength, however in many carvings it can also symbolize the oral nature in which information was passed on from generation to generation.
+                <br>
+                <br>
+                Here at Te Puia we offer you the chance to take away traditional Māori carvings; beautiful handcrafted pieces made at our National Carving School. Look for the Te Puia Official Mark of Authenticity. We also accept carving commissions.
+                 
+            </p>
+        </div>
+        </section>
 </body>
 </html>
