--- a/experiences.html
+++ b/experiences.html
@@ -28,12 +28,12 @@
     <section class="two-column-left">
 
         <div>
-            <img class="experiences-img" src="./images/" alt="National Carving School">
+            <img class="experiences-img" src="./images/nat-carving-school.png" alt="National Carving School">
         </div>
 
         <div class="info">
-            <h1>National Carving School</h1>
-            <p>
+            <h1 class="experience-txt-hdng">National Carving School</h1>
+            <p class="experience-txt-left">
                 In 1967, the first intake to the National Carving School began the task of learning the disciplines of their Māori ancestors. Among those students was Clive Fugill, the man who would become master carver of the institute today.
                 <br>
                 <br>
@@ -51,5 +51,22 @@
             </p>
         </div>
         </section>
+
+        <section class="two-column-right">
+            <div class="info">
+                <h1 class="experience-txt-hdng">Pohutu Geyser</h1>
+                <p class="experience-txt-right">
+                    Our main geyser is called “Pohutu” which means “Big splash” and erupts up to heights of 30 meters. Pohutu is semi-predictable, as she plays 15-20 minutes after another of our active geysers. According to Maori culture, geysers are viewed as gifts from the gods. To the left of Pohutu (when viewing from the bridge) is the “Prince of Wales Feathers” Geyser – named after Prince Edward Albert visited here in the 1900’s. It was traditionally named the “Tohu” or sign as it usually plays 10 mins before and then simultaneously with Pohutu and reaches heights of up to seven metres (almost 23 feet). 
+                    <br>
+                    <br>
+                    The “Kererū” Geyser erupts every few days from the blackened crater closest to Puarenga Stream. The fan-shaped jet can reach heights of up to 15 metres (just over 49 feet). It is named after the New Zealand Pigeon. Geysers act like a giant pressure cooker on earth, shooting boiling water and steam into the air. All geysers have three components; an intensive heat source, a constant supply of water and an underground plumbing system. As rainfall fills the intricate plumbing system below the earth’s surface, molten rock rapidly heats the water. The water is under significant pressure causing the boiling point to be well over 125 degrees Celsius. As pockets of water become turbulent, the pressure is relieved by violently shooting steam and water into the air with tremendous force.
+                </p>
+            </div>
+            <div>
+                <img class="experiences-img" src="./images/pohutu-geyser.png" alt="Pohutu Geyser">
+            </div>
+    
+            
+            </section>
 </body>
 </html>
