--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <div class="div3"> <img class="three-col-img" src="./images/nat-carving-school.png" alt="National Carving School"></div>
         <div class="div4"> <img class="three-col-img" src="./images/pohutu-geyser.png" alt="Pohutu Geyser"></div>
         <div class="div5"> <img class="three-col-img " src="./images/mud-pools.png" alt="Mud Pools"> </div>
-        <div class="div6"> <a href="experiences.html"><h3 class="menu-txt">National Carving School</h3></a></div>
-        <div class="div7"> <a href="experiences.html" class="menu-txt">Pohutu Geyser</a></div>
-        <div class="div8"> <a href="experiences.html" class="menu-txt">Mud Pools</a></div>
+        <div class="div6"> <a href="experiences.html" class="menu-txt"><h3 class="menu-txt">National Carving School</h3></a></div>
+        <div class="div7"> <a href="experiences.html" class="menu-txt"><h3 class="menu-txt">Pohutu Geyser</h3></a></div>
+        <div class="div8"> <a href="experiences.html" class="menu-txt"><h3 class="menu-txt">Mud Pools</h3></a></div>
         <div class="div9"><hr class="menu-line"> </div>
-        <div class="div10" id="hero-image-home2"> </div>
+        <div class="div10"><section class="hero-image-home2"></section> </div>
         <div class="div11"><p class="info">Featuring dramatic geysers, bubbling mud, and beautiful native bush explored by our personalised guided tours. Te Puia is home to the New Zealand Māori Arts and Crafts Institute and offers a state-of-the-art Kiwi Conservation Centre, so you can get closer than ever before to New Zealand’s national treasure- the native Kiwi bird.
             <br>
             For generations, Te Puia has welcomed manuhiri (visitors) from all over the world to explore the magic hidden within Te Whakarewarewa Thermal Valley during both the day and evening. Nau mai, haere mai. We look forward to welcoming you.</p></div>
