details and experiences page done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="menu-bar">   
             <ul>
                 <li><a class="logo-link" href="index.html"><img class="logo-img" src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
-                <li><a class="other-buttons" id="book-now" href="booking.html">Book Now</a></li>
+                <li><a class="other-buttons" href="booking.html">Book Now</a></li>
                 <li><a class="other-buttons" href="about.html">About</a></li>
                 <li><a class="other-buttons" href="experiences.html">Experiences</a></li>
               </ul>
@@ -40,13 +40,18 @@
         <div class="div8"> <a href="experiences.html" class="menu-txt"><h3 class="menu-txt">Mud Pools</h3></a></div>
         <div class="div9"><hr class="menu-line"> </div>
         <div class="div10"><section class="hero-image-home2"></section> </div>
-        <div class="div11"><p class="info">Featuring dramatic geysers, bubbling mud, and beautiful native bush explored by our personalised guided tours. Te Puia is home to the New Zealand Māori Arts and Crafts Institute and offers a state-of-the-art Kiwi Conservation Centre, so you can get closer than ever before to New Zealand’s national treasure- the native Kiwi bird.
+        <div class="div11"><p class="info" id="hero2-txt">Featuring dramatic geysers, bubbling mud, and beautiful native bush explored by our personalised guided tours. Te Puia is home to the New Zealand Māori Arts and Crafts Institute and offers a state-of-the-art Kiwi Conservation Centre, so you can get closer than ever before to New Zealand’s national treasure- the native Kiwi bird.
             <br>
             For generations, Te Puia has welcomed manuhiri (visitors) from all over the world to explore the magic hidden within Te Whakarewarewa Thermal Valley during both the day and evening. Nau mai, haere mai. We look forward to welcoming you.</p></div>
         <div class="div12"><hr class="menu-line"> </div>
-        <div class="div13"> </div>
-        <div class="div14"> </div>
-        <div class="div15"> </div>
         </div>
+        <div class="details-section">
+            <div class="details-img"> <section id="details-hero"></section></div>
+            <div class="details-txt"><h3 class="info">Call Us: 01 234 567
+                <hr class="menu-line-hero">
+                randommail@mailing.com
+            </h3> </div> 
+                   </div>
+
 </body>
 </html>
