about to finish alt text and links for no copyright

--- a/booking.html
+++ b/booking.html
@@ -9,11 +9,25 @@
 <body>
     <section class="menu-bar">   
         <ul>
-            <li><a class="logo-link" href="index.html"><img class="logo-img" src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
-            <li><a class="other-buttons" id="book-now" href="booking.html">Book Now</a></li>
+            <li><a class="logo-link" href="index.html"><img class="logo-img" 
+                src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
+            <li><a class="other-buttons" id="book-now" href="booking.html">Book 
+                Now</a></li>
             <li><a class="other-buttons" href="about.html">About</a></li>
-            <li><a class="other-buttons" href="experiences.html">Experiences</a></li>
+            <li><a class="other-buttons" href="experiences.html">
+                Experiences</a></li>
           </ul>
 </section>
+
+<!--details section-->
+
+<div class="details-section">
+    <div class="details-img"> <section id="details-hero"
+    </section></div>
+    <div class="details-txt"><h3 class="info">Call Us: 01 234 567
+        <hr class="menu-line-hero">
+        randommail@mailing.com
+    </h3> </div> 
+           </div>
 </body>
 </html>
