--- a/experiences.html
+++ b/experiences.html
@@ -9,14 +9,20 @@
 <body>
     <section class="menu-bar">   
         <ul>
-            <li><a class="logo-link" href="index.html"><img class="logo-img" src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
-            <li><a class="other-buttons" id="book-now" href="booking.html">Book Now</a></li>
+            <li><a class="logo-link" href="index.html"><img class="logo-img" 
+                src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
+            <li><a class="other-buttons" id="book-now" href="booking.html">Book 
+                Now</a></li>
             <li><a class="other-buttons" href="about.html">About</a></li>
-            <li><a class="other-buttons" href="experiences.html">Experiences</a></li>
+            <li><a class="other-buttons" href="experiences.html">Experiences
+            </a></li>
           </ul>
     </section>
     <section class="hero-image">
-        <section class="experiences-hero">
+        <section class="experiences-hero" >
+            <img class="experiences-hero" alt="https://mustdonewzealand.co.nz/wp
+            -content/uploads/2016/12/Te-Puia-maori-cultural-performance-hangi-15
+            .jpg">
         <h1 class="hero-text">
             Experiences
             <hr class="menu-line-hero">
@@ -30,19 +36,29 @@
     <section class="two-column-left">
 
         <div>
-            <img class="experiences-img" src="./images/nat-carving-school.png" alt="National Carving School">
+            <img class="experiences-img" src="./images/nat-carving-school.png" 
+            alt="National Carving School">
         </div>
 
         <div class="info">
             <h1 class="experience-txt-hdng">National Carving School</h1>
             <p class="experience-txt-left">
-                In 1967, the first intake to the National Carving School began the task of learning the disciplines of their Māori ancestors. Among those students was Clive Fugill, the man who would become master carver of the institute today.
+                In 1967, the first intake to the National Carving School began
+                 the task of learning the disciplines of their Māori ancestors.
+                  Among those students was Clive Fugill, the man who would 
+                  become master carver of the institute today.
                 <br>
                 <br>
-                Today fulltime carving students study for three years at the national carving school, under the guidance of those, such as Clive Fugill and James Rickard, master carvers at Te Puia who were once institute carving students themselves.
+                Today fulltime carving students study for three years at the 
+                national carving school, under the guidance of those, such as 
+                Clive Fugill and James Rickard, master carvers at Te Puia who 
+                were once institute carving students themselves.
                 <br>
                 <br>
-                Here at Te Puia we offer you the chance to take away traditional Māori carvings; beautiful handcrafted pieces made at our National Carving School. Look for the Te Puia Official Mark of Authenticity. We also accept carving commissions.
+                Here at Te Puia we offer you the chance to take away traditional 
+                Māori carvings; beautiful handcrafted pieces made at our 
+                National Carving School. Look for the Te Puia Official Mark of 
+                Authenticity. We also accept carving commissions.
                  
             </p>
         </div>
@@ -54,17 +70,30 @@
             <div class="info">
                 <h1 class="experience-txt-hdng">Pohutu Geyser</h1>
                 <p class="experience-txt-right">
-                    Our main geyser is called “Pohutu” which means “Big splash” and erupts up to heights of 30 meters. Pohutu is semi-predictable, as she plays 15-20 minutes after another of our active geysers. According to Maori culture, geysers are viewed as gifts from the gods.
+                    Our main geyser is called “Pohutu” which means “Big splash” 
+                    and erupts up to heights of 30 meters. Pohutu is 
+                    semi-predictable, as she plays 15-20 minutes after another 
+                    of our active geysers. According to Maori culture, geysers 
+                    are viewed as gifts from the gods.
                     <br>
                     <br>
-                    To the left of Pohutu (when viewing from the bridge) is the “Prince of Wales Feathers” Geyser – named after Prince Edward Albert visited here in the 1900’s. It was traditionally named the “Tohu” or sign as it usually plays 10 mins before and then simultaneously with Pohutu and reaches heights of up to seven metres (almost 23 feet).
+                    To the left of Pohutu (when viewing from the bridge) is the 
+                    “Prince of Wales Feathers” Geyser – named after Prince 
+                    Edward Albert visited here in the 1900’s. It was 
+                    traditionally named the “Tohu” or sign as it usually plays 
+                    10 mins before and then simultaneously with Pohutu and 
+                    reaches heights of up to seven metres (almost 23 feet).
                     <br>
                     <br>
-                    The “Kererū” Geyser erupts every few days from the blackened crater closest to Puarenga Stream. The fan-shaped jet can reach heights of up to 15 metres (just over 49 feet). It is named after the New Zealand Pigeon.
+                    The “Kererū” Geyser erupts every few days from the 
+                    blackened crater closest to Puarenga Stream. The fan-shaped 
+                    jet can reach heights of up to 15 metres (just over 49 
+                    feet). It is named after the New Zealand Pigeon.
                 </p>
             </div>
             <div>
-                <img class="experiences-img" src="./images/pohutu-geyser.png" alt="Pohutu Geyser">
+                <img class="experiences-img" src="./images/pohutu-geyser.png" 
+                alt="Pohutu Geyser">
             </div>
             </section>
 
@@ -73,29 +102,54 @@
             <section class="two-column-left">
 
                 <div>
-                    <img class="experiences-img" src="./images/mud-pools.png" alt="National Carving School">
+                    <img class="experiences-img" src="./images/mud-pools.png" 
+                    alt="National Carving School">
                 </div>
         
                 <div class="info">
                     <h1 class="experience-txt-hdng">Mud Pools</h1>
                     <p class="experience-txt-left">
-                        The mud pool is the result of acid gases and steam that cause the decomposition of minerals (feldspars) to form a clay called kaolin. Kaolin is white when pure, but finely divided black sulphur turns it to grey. This mud pool is also known as the “Frog Pool” because of the similarity between the plopping mud and leaping frogs.
+                        The mud pool is the result of acid gases and steam that 
+                        cause the decomposition of minerals (feldspars) to form 
+                        a clay called kaolin. Kaolin is white when pure, but 
+                        finely divided black sulphur turns it to grey. This mud 
+                        pool is also known as the “Frog Pool” because of the 
+                        similarity between the plopping mud and leaping frogs.
                         <br>
                         <br>
-                        Some pools contain mud with medicinal properties that are used to treat skin, rheumatic and arthritic ailments. Māori traditionally used the mud to treat stomach infections by mixing a small amount with water and drinking it.
+                        Some pools contain mud with medicinal properties that 
+                        are used to treat skin, rheumatic and arthritic 
+                        ailments. Māori traditionally used the mud to treat 
+                        stomach infections by mixing a small amount with water 
+                        and drinking it.
                         <br>
                         <br>
-                        That “pongy” smell Rotorua is famous for is due to hydrogen sulphide released by geothermal features. When released into the air, the hydrogen sulphide reacts with oxygen, creating sulphuric acid. This acid has the ability to dissolve rock into fine particles of silica and clay, and when combined with a small supply of water, a mud pool is created.
+                        That “pongy” smell Rotorua is famous for is due to 
+                        hydrogen sulphide released by geothermal features. 
+                        When released into the air, the hydrogen sulphide 
+                        reacts with oxygen, creating sulphuric acid. This acid 
+                        has the ability to dissolve rock into fine particles of 
+                        silica and clay, and when combined with a small supply 
+                        of water, a mud pool is created.
                         <br>
                         <br>
-                        The Rotorua Thermal Mud used in face masks and other beauty products is sourced from mud pools about ten times the size of Ngāmōkaiakoko Mud Pool. You can purchase some of these products from Te Puia’s Gift Shop.
+                        The Rotorua Thermal Mud used in face masks and other 
+                        beauty products is sourced from mud pools about ten 
+                        times the size of Ngāmōkaiakoko Mud Pool. You can 
+                        purchase some of these products from Te Puia’s Gift 
+                        Shop.
                     </p>
                 </div>
                 </section>
                 <hr class-="menu-line">
+
+<!--details section-->
+
                 <div class="details-section">
-                    <div class="details-img"> <section id="details-hero"></section></div>
-                    <div class="details-txt"><h3 class="info">Call Us: 01 234 567
+                    <div class="details-img"> <section id="details-hero">                       
+                    </section></div>
+                    <div class="details-txt"><h3 class="info">
+                        Call Us: 01 234 567
                         <hr class="menu-line-hero">
                         randommail@mailing.com
                     </h3> </div> 
