--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
 
         <section class="hero-image">
             <section class="hero-image-about">
-                <img class="hero-image-about" alt="https://encrypted-tbn2.gstati
-                c.com/images?q=tbn:ANd9GcTk9SqNxiAH1FU1Yw_dKN_wo910QB3hY1tYS2K9q
-                BixgB1O7ubH">
+                <img class="hero-image-about" alt="https://images.scratchdigital
+                .co.nz/v7/_mpm_/assets/uploads/2008-te-puia_700x400_acf_cropped-
+                1.jpg?w=387&h=221.142856977">
             <h1 class="hero-text">
                 About Us
                 <hr class = "menu-line-hero">
