strat booking form

--- a/about.html
+++ b/about.html
@@ -22,9 +22,7 @@
 
         <section class="hero-image">
             <section class="hero-image-about">
-                <img class="hero-image-about" alt="https://images.scratchdigital
-                .co.nz/v7/_mpm_/assets/uploads/2008-te-puia_700x400_acf_cropped-
-                1.jpg?w=387&h=221.142856977">
+                
             <h1 class="hero-text">
                 About Us
                 <hr class = "menu-line-hero">
@@ -77,3 +75,9 @@
     
     </body>
 </html>
+
+<!--
+The link to the hero image photo is here
+https://images.scratchdigital.co.nz/v7/_mpm_/assets/uploads/2008-te-puia_700x400
+_acf_cropped-1.jpg?w=387&h=221.142856977
+-->
