--- a/booking.html
+++ b/booking.html
@@ -19,6 +19,34 @@
           </ul>
 </section>
 
+<section class="booking-form">
+
+    <h2 class="booking-hdng">Experiences choice:</h2>
+
+<form class="contact-info">
+    <label for="fname">Full name:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="phnum">Phone number/Email:</label><br>
+    <input type="text" id="lname" name="lname">
+</form>
+
+<h3 class="booking-experience">Pick Your Experience</h3>
+
+<form class="experiences-choice">
+  <input type="checkbox" value="nat-carving-school">
+  <label for="nat-carving-school">National Carving School</label><br>
+  <input type="checkbox" value="pohutu-geyser">
+  <label for="pphutu-geyser">Pohutu Geyser</label><br>
+  <input type="checkbox" value="mud-pools">
+  <label for="mud-pools">Mud Pools</label>
+</form> 
+
+<form class="submit">
+    <input type="submit" value="Submit">
+</form>
+
+</section>
+
 <!--details section-->
 
 <div class="details-section">
