--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </html>
 
 <!--
-All the links to the hero image photo is here
+The link to the hero image photo is here
 https://www.pelago.co/img/products/NZ-New%20Zealand/te-puia-experiences-geyser-b
 y-night/0905-0344_te-puia-experiences-geyser-by-night-newzealand-pelago0.jpg
 -->
