booking page done

--- a/booking.html
+++ b/booking.html
@@ -19,26 +19,38 @@
           </ul>
 </section>
 
+<section class="hero-image">
+    <section class="hero-image-booking">
+        
+    <h1 class="hero-text">
+        Book Now
+        <hr class = "menu-line-hero">
+    </h1>
+    <p id="hero-under-text">An Adventure Awaits</p>
+</section>
+</section>
+
+<hr class="menu-line">
+
 <section class="booking-form">
 
-    <h2 class="booking-hdng">Experiences choice:</h2>
-
 <form class="contact-info">
-    <label for="fname">Full name:</label><br>
+    <label for="fname" class="booking-txt">Full name:</label><br>
     <input type="text" id="fname" name="fname"><br>
-    <label for="phnum">Phone number/Email:</label><br>
+    <br>
+    <label for="phnum" class="booking-txt">Phone number/Email:</label><br>
     <input type="text" id="lname" name="lname">
 </form>
 
 <h3 class="booking-experience">Pick Your Experience</h3>
 
 <form class="experiences-choice">
-  <input type="checkbox" value="nat-carving-school">
-  <label for="nat-carving-school">National Carving School</label><br>
-  <input type="checkbox" value="pohutu-geyser">
-  <label for="pphutu-geyser">Pohutu Geyser</label><br>
-  <input type="checkbox" value="mud-pools">
-  <label for="mud-pools">Mud Pools</label>
+  <input type="checkbox" value="nat-carving-school">
+  <label for="nat-carving-school">National Carving School</label><br>
+  <input type="checkbox" value="pohutu-geyser">
+  <label for="pohutu-geyser">Pohutu Geyser</label><br>
+  <input type="checkbox" value="mud-pools">
+  <label for="mud-pools">Mud Pools</label>
 </form> 
 
 <form class="submit">
@@ -46,6 +58,8 @@
 </form>
 
 </section>
+
+<hr class="menu-line">
 
 <!--details section-->
 
