--- a/experiences.html
+++ b/experiences.html
@@ -12,7 +12,7 @@
             <li><a class="logo-link" href="index.html"><img class="logo-img" 
                 src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
             <li><a class="other-buttons" id="book-now" 
-                href="https://ecommerce.tepuia.com/">Book 
+                href="booking.html">Book 
                 Now</a></li>
             <li><a class="other-buttons" href="about.html">About</a></li>
             <li><a class="other-buttons" href="experiences.html">Experiences
