comments on css start

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=100.0">
     <link rel="stylesheet" href="style.css">    
     <title>Home Page</title>
 </head>
@@ -12,10 +12,22 @@
 
     <div class="menu-bar">   
             <ul>
-                <li><a class="logo-link" href="index.html"><img class="logo-img" src="./images/Te-Puia-logo.png" alt="Te Puia Logo"></a></li>
-                <li><a class="other-buttons" href="booking.html">Book Now</a></li>
-                <li><a class="other-buttons" href="about.html">About</a></li>
-                <li><a class="other-buttons" href="experiences.html">Experiences</a></li>
+                <li>
+                    <a class="logo-link" href="index.html"><img class="logo-img"
+                src="./images/Te-Puia-logo.png" alt="https://www.tepuia.com/wp-c
+                ontent/uploads/2022/07/TP_logo_hori_black_rotorua.png">
+                </a>
+                </li>
+                <li>
+                    <a class="other-buttons" href="booking.html">Book Now</a>
+                </li>
+                <li>
+                    <a class="other-buttons" href="about.html">About</a>
+                </li>
+                <li>
+                    <a class="other-buttons" href="experiences.html">Experiences
+                    </a>
+                </li>
               </ul>
             </div>
 
