everything done (fr this time)

--- a/booking.html
+++ b/booking.html
@@ -80,7 +80,7 @@
 <!--details section-->
 
 <div class="details-section">
-    <div class="details-img"></div>
+    <div class="details-bg"></div>
      <div class="details-txt"><h3 class="info">
          Call Us: 01 234 567</h3>
          <hr class="details-line">
