--- a/experiences.html
+++ b/experiences.html
@@ -35,6 +35,8 @@
     </div>
 </div>
 
+
+<hr class="menu-line">
 <!-- two column left -->
     
     <div class="two-column-left">
@@ -160,7 +162,7 @@
 <!--details section-->
 
 <div class="details-section">
-    <div class="details-img"></div>
+    <div class="details-bg"></div>
      <div class="details-txt"><h3 class="info">
          Call Us: 01 234 567</h3>
          <hr class="details-line">
