--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <!--details section-->
 
 <div class="details-section">
-    <div class="details-img"></div>
+    <div class="details-bg"></div>
      <div class="details-txt"><h3 class="info">
          Call Us: 01 234 567</h3>
          <hr class="details-line">
